--- a/.releaserc.json
+++ b/.releaserc.json
@@ -18,7 +18,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "npm run package"
+        "prepareCmd": "npx vsce package"
       }
     ],
     [
